# querysssb

./: .gitignore  README.md  automate.py  doit.sh  main.py  page.html  pyproject.toml  query_sssb.py  requirements.txt
auth/: login.py
config/: settings.py
report/: plotandmail.py
scraper/: listings.py
